k8s/applicatie/stream/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming-vod-service
  namespace: applicatie
spec:
  replicas: 2
  selector:
    matchLabels:
      app: streaming-vod-service
  template:
    metadata:
      labels:
        app: streaming-vod-service
    spec:
      serviceAccountName: web-sa
      containers:
      - name: nginx
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 128Mi
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: stream-html
---
apiVersion: v1
kind: Service
metadata:
  name: streaming-vod-service
  namespace: applicatie
spec:
  selector:
    app: streaming-vod-service
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-vod-service
  namespace: applicatie
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: app.leerteam3.lab
    http:
      paths:
      - path: /stream
        pathType: ImplementationSpecific
        backend:
          service:
            name: streaming-vod-service
            port:
              number: 80
